--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     En Gestiones BV, nuestra cultura se fundamenta en la innovación, excelencia y confianza. Nuestra misión es potenciar el crecimiento de nuestros clientes a través del marketing innovador y análisis avanzado de datos, transformando datos complejos en estrategias claras y efectivas que ayudan a las empresas a posicionarse y alcanzar sus metas. Aspiramos a ser líderes en transformación digital para negocios en crecimiento, redefiniendo cómo las empresas utilizan el análisis de datos y las estrategias de marketing para crear valor sostenible en un mundo en constante cambio.
                 </p>
             </section>
-            <img src="https://gestionesbv.github.io/gestiones_bv/marketing.jpg" alt="Marketing" class="marketing-image">
+            <img src="https://raw.githubusercontent.com/gestionesbv/eliminacion_usuario_gestionesbv/main/marketing.jpg" alt="Marketing" class="marketing-image">
         </div>
 
         <section class="services">
