--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         .about-us-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             gap: 40px;
             width: 100%;
@@ -100,6 +100,9 @@
             min-width: 300px;
             font-size: 1.2em;
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         .about-us h2 {
@@ -109,9 +112,16 @@
             text-align: center;
         }
 
+        .about-us p {
+            color: #666;
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+
         .marketing-image {
-            width: 300px;
-            height: 300px;
+            width: 100%;
+            max-width: 400px;
+            height: auto;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             object-fit: cover;
@@ -146,6 +156,10 @@
             box-sizing: border-box;
             width: 100%;
             max-width: 800px;
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            gap: 20px;
             transition: transform 0.3s ease;
             font-size: 1.1em;
             line-height: 1.6;
@@ -156,11 +170,14 @@
         }
 
         .service-item img {
-            width: 100%;
-            height: 200px;
+            width: 40%;
+            height: auto;
             border-radius: 10px;
-            margin-bottom: 20px;
             object-fit: cover;
+        }
+
+        .service-text {
+            flex: 1;
         }
 
         .service-item h3 {
@@ -185,12 +202,15 @@
         /* Media Queries */
         @media (max-width: 1024px) {
             .marketing-image {
-                width: 250px;
-                height: 250px;
+                max-width: 350px;
             }
 
             .service-item h3 {
                 font-size: 1.6em;
+            }
+
+            .service-item img {
+                width: 35%;
             }
         }
 
@@ -222,9 +242,8 @@
             }
 
             .marketing-image {
-                width: 90%;
+                max-width: 100%;
                 height: auto;
-                max-height: 300px;
             }
 
             .about-us {
@@ -237,8 +256,19 @@
             }
 
             .service-item {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+
+            .service-item img {
                 width: 100%;
-                padding: 20px;
+                max-width: 400px;
+                margin-bottom: 20px;
+            }
+
+            .service-text {
+                width: 100%;
             }
 
             .service-item h3 {
@@ -294,20 +324,26 @@
             <div class="services-wrapper">
                 <div class="service-item">
                     <img src="https://gestionesbv.github.io/gestiones_bv/kpi_looker.png" alt="KPI y Dashboard">
-                    <h3>KPI y Dashboards</h3>
-                    <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como BigQuery, Sharepoint, y Looker, adaptadas a tus necesidades empresariales.</p>
+                    <div class="service-text">
+                        <h3>KPI y Dashboards</h3>
+                        <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como BigQuery, Sharepoint, y Looker, adaptadas a tus necesidades empresariales.</p>
+                    </div>
                 </div>
                 <div class="service-item">
                     <img src="https://gestionesbv.github.io/gestiones_bv/bigquery.png" alt="Servicios SQL">
-                    <h3>Servicios SQL</h3>
-                    <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
+                    <div class="service-text">
+                        <h3>Servicios SQL</h3>
+                        <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
+                    </div>
                 </div>
                 <div class="service-item">
                     <img src="https://gestionesbv.github.io/gestiones_bv/automatizacion.jpeg" alt="Automatización">
-                    <h3>Automatización</h3>
-                    <p>Automatización de procesos repetitivos y envío de reportes programados para maximizar la eficiencia de los equipos y reducir costos. Configuración de triggers, integraciones y scripts a medida.</p>
+                    <div class="service-text">
+                        <h3>Automatización</h3>
+                        <p>Automatización de procesos repetitivos y envío de reportes programados para maximizar la eficiencia de los equipos y reducir costos. Configuración de triggers, integraciones y scripts a medida.</p>
+                    </div>
                 </div>
-                <!-- Puedes agregar más servicios aquí -->
+                <!-- Puedes agregar más servicios aquí siguiendo el mismo formato -->
             </div>
         </section>
     </div>
