--- a/index.html
+++ b/index.html
@@ -98,30 +98,26 @@
             text-align: justify;
             flex: 1;
             min-width: 300px;
-            font-size: 1.2em;
+            font-size: 1.3em; /* Aumenté el tamaño de la fuente */
             line-height: 1.6;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
         }
 
         .about-us h2 {
             color: #6a7a96;
-            font-size: 2.5em;
+            font-size: 3em; /* Aumenté el tamaño del título */
             margin-bottom: 20px;
             text-align: center;
         }
 
         .about-us p {
             color: #666;
-            font-size: 1.2em;
+            font-size: 1.2em; /* Aumenté el tamaño de la fuente */
             line-height: 1.6;
         }
 
         .marketing-image {
-            width: 100%;
-            max-width: 400px;
-            height: auto;
+            width: 400px; /* Tamaño fijo para mantener proporción */
+            height: 400px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             object-fit: cover;
@@ -202,7 +198,8 @@
         /* Media Queries */
         @media (max-width: 1024px) {
             .marketing-image {
-                max-width: 350px;
+                width: 350px;
+                height: 350px;
             }
 
             .service-item h3 {
@@ -242,8 +239,9 @@
             }
 
             .marketing-image {
-                max-width: 100%;
+                width: 90%;
                 height: auto;
+                max-height: 300px;
             }
 
             .about-us {
