--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
         /* Sección Quiénes Somos */
         .about-us-container {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: row; /* Alineación horizontal */
+            align-items: flex-start; /* Alineación vertical superior */
             gap: 40px;
             width: 100%;
         }
@@ -98,20 +97,23 @@
             text-align: justify;
             flex: 1;
             min-width: 300px;
-            font-size: 1.3em; /* Aumenté el tamaño de la fuente */
+            font-size: 1.3em; /* Tamaño de fuente aumentado */
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         .about-us h2 {
             color: #6a7a96;
-            font-size: 3em; /* Aumenté el tamaño del título */
+            font-size: 3em; /* Tamaño del título aumentado */
             margin-bottom: 20px;
             text-align: center;
         }
 
         .about-us p {
             color: #666;
-            font-size: 1.2em; /* Aumenté el tamaño de la fuente */
+            font-size: 1.2em; /* Tamaño de fuente aumentado */
             line-height: 1.6;
         }
 
@@ -153,8 +155,8 @@
             width: 100%;
             max-width: 800px;
             display: flex;
-            flex-direction: row;
-            align-items: flex-start;
+            flex-direction: row; /* Alineación horizontal */
+            align-items: flex-start; /* Alineación vertical superior */
             gap: 20px;
             transition: transform 0.3s ease;
             font-size: 1.1em;
@@ -166,7 +168,7 @@
         }
 
         .service-item img {
-            width: 40%;
+            width: 40%; /* Tamaño proporcional */
             height: auto;
             border-radius: 10px;
             object-fit: cover;
@@ -233,7 +235,7 @@
             }
 
             .about-us-container {
-                flex-direction: column;
+                flex-direction: column; /* Apilar verticalmente */
                 align-items: center;
                 gap: 20px;
             }
@@ -254,7 +256,7 @@
             }
 
             .service-item {
-                flex-direction: column;
+                flex-direction: column; /* Apilar verticalmente */
                 align-items: center;
                 text-align: center;
             }
